--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ Temporary Items
 # End of https://www.gitignore.io/api/macos,visualstudiocode
 
 ### Other Files ###
+build
 node_modules
 *.log
 coverage
